- Added: "--auto-multi-levels" option for registration tool. Selects automatic
    resolution and optimization parameters for given number of levels.
- Added: new top-level configuration option to switch all numerical algorithms
    (i.e., AlgLib) to single-precision floats. This can be used to save memory
    in extreme situations (for example, high-resolution volume reconstruction)

- Changed: CMake switches for changing coordinate and data real type are now
    advanced.

- Fixed: numerical instability of correlation coefficient (leading to values
    outside -1..+1, which in turn produced invalid p-values
- Fixed: legacy IGS_MOUNTPOINTS was not considered
- Fixed: principal axes registration was broken (Issue NITRC-#3743)
- Fixed: configure problem with bundled zlib, which broke compile of NrrdIO in
    Visual Studio.
- Fixed: Analyze/Nifti images were not written compressed
- Fixed: numerous compiler errors and warnings detected by GCC 4.4

- Improved: simplified code by removing HAVE_ZLIB conditionals. These are now
    always true since we're bundling zlib.
- Improved: use double instead of float for linear model and regression
- Improved: use CMake's FindOpenMP to detect and configure OpenMP
- Improved: prevent configurations where CMTK_USE_THREADS is ON but
    CMTK_BUILD_SMP is OFF.
- Improved: better integration of Doxygen into CMake build system
- Improved: better output of stacked image information in dcm2image

- Removed: cmtk::MathUtil::CoefficientOfCorrelation was removed because it
    turned out to be a redundant, numerically unstable variant of
    MathUtil::Correlation
- Removed: deprecated options -m/--metric removed from registration and warp
    tools.
- Removed: obsolete tool skeleton "detect_interleave"
- Removed: obsolete "--threads" option from all remaining command lines; using
    CMTK_NUM_THREADS environment variable is more flexible and versatile.


Release CMTK-0.2.4 (2009-05-11):
